Tweak build and support profiling