@@ -133,7 +133,7 @@ wrapper {
 }
 
 test {
-    jvmArgs '-ea', "-Xms512m", "-Xmx1g", "-XX:+UseConcMarkSweepGC", "-Dgroovy.antlr4.cache.threshold=150", "-Dgroovy.permissive.property.access=true"
+    jvmArgs '-ea', "-Xms512m", "-Xmx2g", "-XX:+UseG1GC", "-Dgroovy.antlr4.cache.threshold=150", "-Dgroovy.permissive.property.access=true", "-agentpath:${rootProject.property('async.profiler.agentpath')}"
 
     def headless = System.properties['java.awt.headless']
     if (headless == 'true') {
